2011-09-12  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/value/builtin/carrays.hh: Fix a compilation error with
	Apple's clang 2.1.

2011-09-12  Guillaume Lazzara  <z@lrde.epita.fr>

	Workaround for Apple's llvm-gcc 4.2.1 on Mac OS Lion 10.7.1

	* mln/core/concept/function.hh: Add operator=() in Function
	concept class.

2011-09-08  Guillaume Lazzara  <z@lrde.epita.fr>

	* doc/Makefile.am: Fix devel-refman output directory.

2011-09-08  Guillaume Lazzara  <z@lrde.epita.fr>

	* tests/border/mirror.cc: Add missing includes.

2011-09-08  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix doc generation.

	* doc/Doxyfile.in: Enable source code parsing and listing. Fix
	include directories.

	* doc/ref-guide.tex,
	* doc/technical.tex: Use .sty files as input files instead of
	packages.

	* doc/tutorial.tex: Use .sty files as input files instead of
	packages. Fix references.

	* mln/core/concept/object.hh: Fix copyright.

2011-09-08  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/core/image/vertex_image.hh: Fix invalid construction.

2011-09-07  Guillaume Lazzara  <z@lrde.epita.fr>

	Add comments.

	* mln/accu/take.hh,
	* mln/border/mirror.hh: Here.

2011-09-07  Guillaume Lazzara  <z@lrde.epita.fr>

	* tests/border/mirror.cc: Revamp test.

2011-09-06  Guillaume Lazzara  <z@lrde.epita.fr>

	Small fixes in Milena.

	* mln/draw/site_set.hh: Remove call to exact().

	* mln/morpho/skeleton_constrained.hh: Add a missing const in fast
	implementation.

	* mln/topo/is_simple_2d.hh: Add a comment.

	* mln/topo/skeleton/is_simple_point.hh: Fix a wrong neighborhood
	type.

	* tests/topo/skeleton/is_simple_point.cc: Fix compilation.

2011-09-06  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/morpho/skeleton_constrained.hh: Fix algorithm.

2011-09-02  Guillaume Lazzara  <z@lrde.epita.fr>

	Regen generated files in Milena.

	* headers.mk,
	* tests/unit_test/unit-tests.mk: Here.

2011-09-02  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/debug/println_with_border.spe.hh: Improve output for 3D