@@ -1,4 +1,4 @@
-// Copyright (C) 2007, 2008, 2009 EPITA Research and Development
+// Copyright (C) 2007, 2008, 2009, 2011 EPITA Research and Development
 // Laboratory (LRDE)
 //
 // This file is part of Olena.
@@ -89,16 +89,17 @@ namespace mln
 	  return;
 	}
 
-	/* FIXME: Careful, the code generated for this function by g++
-	   4.2 with high a optimization level (`-O3') and without
+	/* Careful, the code generated for this function by g++ 4.2
+	   with a high optimization level (`-O3') and without
 	   `-fno-strict-aliasing' might be wrong (at least with
 	   Debian's g++ 4.2 on IA-32)!  Note that Debian's g++ 4.0,
-	   4.1, 4.3 and 4.4 are fine.  */
-#if defined(__GNUC__) && defined(__GNUC_MINOR__)
-# if __GNUC__ == 4 && __GNUC_MINOR__ == 2
-#  warning The code generated by g++ 4.2 on Debian GNU/Linux 5.0 for IA-32 for this function might be wrong.
-# endif
-#endif
+	   4.1, 4.3 and 4.4 are fine.
+
+	   We used to trigger a warning when g++ 4.2 was detected, but
+	   we no longer do this since this warning was popping in
+	   virtually every compiler output and because this bug is
+	   limited to some specific use cases.  Moreover, g++ 4.2 will
+	   be less and less used over time.  */
 	if (sizeof(mln_value(Id)) == 1)
 	{
 	  std::memcpy((void*) (&dest.val()), // violent casts
